crates/mel-cli/src/snapshots/mel_cli__tests__sema_scripted_panel_flag_mode_span_tabbed_crlf_inline.snap
---
source: crates/mel-cli/src/main.rs
expression: "render_snapshot(\"inline-crlf-scripted-panel.mel\",\nconcat!(\"global string $gMainPane;\\r\\n\", \"proc string test() {\\r\\n\",\n\"\\t\\t\\t$panelName = `scriptedPanel -menuBarVisible true -parent $gMainPane -l \\\"anyLabel\\\" -tearOff -type \\\"acPanelType\\\"`;\\r\\n\",\n\"}\\r\\n\",),)"
---
source: inline-crlf-scripted-panel.mel
encoding: utf-8
items: 2
decode diagnostics: 0
lexical diagnostics: 0
parse errors: 0
semantic diagnostics: 3
[31mError:[0m sema: flag "-label" is not available in create mode for command "scriptedPanel"
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m inline-crlf-scripted-panel.mel:3:72 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m3 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m$[0m[38;5;249mp[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249mN[0m[38;5;249ma[0m[38;5;249mm[0m[38;5;249me[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m`[0m[38;5;249ms[0m[38;5;249mc[0m[38;5;249mr[0m[38;5;249mi[0m[38;5;249mp[0m[38;5;249mt[0m[38;5;249me[0m[38;5;249md[0m[38;5;249mP[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249mm[0m[38;5;249me[0m[38;5;249mn[0m[38;5;249mu[0m[38;5;249mB[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249mV[0m[38;5;249mi[0m[38;5;249ms[0m[38;5;249mi[0m[38;5;249mb[0m[38;5;249ml[0m[38;5;249me[0m[38;5;249m [0m[38;5;249mt[0m[38;5;249mr[0m[38;5;249mu[0m[38;5;249me[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249mp[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249me[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249m$[0m[38;5;249mg[0m[38;5;249mM[0m[38;5;249ma[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mP[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249m [0m[35m-[0m[35ml[0m[38;5;249m [0m[38;5;249m"[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249my[0m[38;5;249mL[0m[38;5;249ma[0m[38;5;249mb[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249m"[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249mt[0m[38;5;249me[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249mO[0m[38;5;249mf[0m[38;5;249mf[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249mt[0m[38;5;249my[0m[38;5;249mp[0m[38;5;249me[0m[38;5;249m [0m[38;5;249m"[0m[38;5;249ma[0m[38;5;249mc[0m[38;5;249mP[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249mT[0m[38;5;249my[0m[38;5;249mp[0m[38;5;249me[0m[38;5;249m"[0m[38;5;249m`[0m[38;5;249m;[0m
 [38;5;240m  │[0m                                                                        [35m─[0m[35m┬[0m  
 [38;5;240m  │[0m                                                                         [35m╰[0m[35m─[0m[35m─[0m flag "-label" is not available in create mode for command "scriptedPanel"
[38;5;246m───╯[0m
[31mError:[0m sema: flag "-tearOff" is not available in create mode for command "scriptedPanel"
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m inline-crlf-scripted-panel.mel:3:86 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m3 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m$[0m[38;5;249mp[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249mN[0m[38;5;249ma[0m[38;5;249mm[0m[38;5;249me[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[38;5;249m`[0m[38;5;249ms[0m[38;5;249mc[0m[38;5;249mr[0m[38;5;249mi[0m[38;5;249mp[0m[38;5;249mt[0m[38;5;249me[0m[38;5;249md[0m[38;5;249mP[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249mm[0m[38;5;249me[0m[38;5;249mn[0m[38;5;249mu[0m[38;5;249mB[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249mV[0m[38;5;249mi[0m[38;5;249ms[0m[38;5;249mi[0m[38;5;249mb[0m[38;5;249ml[0m[38;5;249me[0m[38;5;249m [0m[38;5;249mt[0m[38;5;249mr[0m[38;5;249mu[0m[38;5;249me[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249mp[0m[38;5;249ma[0m[38;5;249mr[0m[38;5;249me[0m[38;5;249mn[0m[38;5;249mt[0m[38;5;249m [0m[38;5;249m$[0m[38;5;249mg[0m[38;5;249mM[0m[38;5;249ma[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mP[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249ml[0m[38;5;249m [0m[38;5;249m"[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249my[0m[38;5;249mL[0m[38;5;249ma[0m[38;5;249mb[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249m"[0m[38;5;249m [0m[35m-[0m[35mt[0m[35me[0m[35ma[0m[35mr[0m[35mO[0m[35mf[0m[35mf[0m[38;5;249m [0m[38;5;249m-[0m[38;5;249mt[0m[38;5;249my[0m[38;5;249mp[0m[38;5;249me[0m[38;5;249m [0m[38;5;249m"[0m[38;5;249ma[0m[38;5;249mc[0m[38;5;249mP[0m[38;5;249ma[0m[38;5;249mn[0m[38;5;249me[0m[38;5;249ml[0m[38;5;249mT[0m[38;5;249my[0m[38;5;249mp[0m[38;5;249me[0m[38;5;249m"[0m[38;5;249m`[0m[38;5;249m;[0m
 [38;5;240m  │[0m                                                                                      [35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m┬[0m[35m─[0m[35m─[0m[35m─[0m  
 [38;5;240m  │[0m                                                                                          [35m╰[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m flag "-tearOff" is not available in create mode for command "scriptedPanel"
[38;5;246m───╯[0m
[31mError:[0m sema: proc "test" declares a return type but never returns a value
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m inline-crlf-scripted-panel.mel:2:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [35m╭[0m[35m─[0m[35m▶[0m[35m [0m[35mp[0m[35mr[0m[35mo[0m[35mc[0m[35m [0m[35ms[0m[35mt[0m[35mr[0m[35mi[0m[35mn[0m[35mg[0m[35m [0m[35mt[0m[35me[0m[35ms[0m[35mt[0m[35m([0m[35m)[0m[35m [0m[35m{[0m
 [38;5;240m  ┆[0m [35m┆[0m   
 [38;5;246m4 │[0m [35m├[0m[35m─[0m[35m▶[0m[35m [0m[35m}[0m
 [38;5;240m  │[0m [35m│[0m      
 [38;5;240m  │[0m [35m╰[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m proc "test" declares a return type but never returns a value
[38;5;246m───╯[0m
