crates/mel-cli/src/snapshots/mel_cli__tests__sema_typed_missing_value_return.snap
---
source: crates/mel-cli/src/main.rs
assertion_line: 537
expression: "render_snapshot(\"sema/proc/typed-missing-value-return.mel\",\ninclude_str!(\"../../../tests/corpus/sema/proc/typed-missing-value-return.mel\"),)"
---
source: sema/proc/typed-missing-value-return.mel
encoding: utf-8
items: 1
decode diagnostics: 0
lexical diagnostics: 0
parse errors: 0
semantic diagnostics: 1
[31mError:[0m sema: proc "helper" declares a return type but never returns a value
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m sema/proc/typed-missing-value-return.mel:1:1 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [35m╭[0m[35m─[0m[35m▶[0m[35m [0m[35mp[0m[35mr[0m[35mo[0m[35mc[0m[35m [0m[35mi[0m[35mn[0m[35mt[0m[35m [0m[35mh[0m[35me[0m[35ml[0m[35mp[0m[35me[0m[35mr[0m[35m([0m[35m)[0m[35m [0m[35m{[0m
 [38;5;240m  ┆[0m [35m┆[0m   
 [38;5;246m3 │[0m [35m├[0m[35m─[0m[35m▶[0m[35m [0m[35m}[0m
 [38;5;240m  │[0m [35m│[0m       
 [38;5;240m  │[0m [35m╰[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m proc "helper" declares a return type but never returns a value
[38;5;246m───╯[0m
