crates/mel-cli/src/snapshots/mel_cli__tests__sema_typed_return_type_mismatch.snap
---
source: crates/mel-cli/src/main.rs
assertion_line: 559
expression: "render_snapshot(\"sema/proc/typed-return-type-mismatch.mel\",\ninclude_str!(\"../../../tests/corpus/sema/proc/typed-return-type-mismatch.mel\"),)"
---
source: sema/proc/typed-return-type-mismatch.mel
encoding: utf-8
items: 1
decode diagnostics: 0
lexical diagnostics: 0
parse errors: 0
semantic diagnostics: 1
[31mError:[0m sema: proc "helper" returns String but declares Int
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m sema/proc/typed-return-type-mismatch.mel:2:5 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m2 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[35mr[0m[35me[0m[35mt[0m[35mu[0m[35mr[0m[35mn[0m[35m [0m[35m"[0m[35mb[0m[35ma[0m[35md[0m[35m"[0m[35m;[0m
 [38;5;240m  │[0m     [35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m┬[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m  
 [38;5;240m  │[0m           [35m╰[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m proc "helper" returns String but declares Int
[38;5;246m───╯[0m
