crates/mel-cli/src/snapshots/mel_cli__tests__sema_typed_return_type_mismatch_via_call.snap
---
source: crates/mel-cli/src/main.rs
assertion_line: 581
expression: "render_snapshot(\"sema/proc/typed-return-type-mismatch-via-call.mel\",\ninclude_str!(\"../../../tests/corpus/sema/proc/typed-return-type-mismatch-via-call.mel\"),)"
---
source: sema/proc/typed-return-type-mismatch-via-call.mel
encoding: utf-8
items: 2
decode diagnostics: 0
lexical diagnostics: 0
parse errors: 0
semantic diagnostics: 1
[31mError:[0m sema: proc "outer" returns String but declares Int
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m sema/proc/typed-return-type-mismatch-via-call.mel:6:5 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m6 │[0m [38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[38;5;249m [0m[35mr[0m[35me[0m[35mt[0m[35mu[0m[35mr[0m[35mn[0m[35m [0m[35mh[0m[35me[0m[35ml[0m[35mp[0m[35me[0m[35mr[0m[35m([0m[35m)[0m[35m;[0m
 [38;5;240m  │[0m     [35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m┬[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m  
 [38;5;240m  │[0m             [35m╰[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m[35m─[0m proc "outer" returns String but declares Int
[38;5;246m───╯[0m
