crates/mel-cli/src/snapshots/mel_cli__tests__sema_var_init_type_mismatch.snap
---
source: crates/mel-cli/src/main.rs
expression: "render_snapshot(\"sema/proc/var-init-type-mismatch.mel\",\ninclude_str!(\"../../../tests/corpus/sema/proc/var-init-type-mismatch.mel\"),)"
---
source: sema/proc/var-init-type-mismatch.mel
encoding: utf-8
items: 1
decode diagnostics: 0
lexical diagnostics: 0
parse errors: 0
semantic diagnostics: 1
[31mError:[0m sema: variable "$value" has declared type String but initializer is Int
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m sema/proc/var-init-type-mismatch.mel:1:17 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249ms[0m[38;5;249mt[0m[38;5;249mr[0m[38;5;249mi[0m[38;5;249mn[0m[38;5;249mg[0m[38;5;249m [0m[38;5;249m$[0m[38;5;249mv[0m[38;5;249ma[0m[38;5;249ml[0m[38;5;249mu[0m[38;5;249me[0m[38;5;249m [0m[38;5;249m=[0m[38;5;249m [0m[35m1[0m[38;5;249m;[0m
 [38;5;240m  │[0m                 [35m┬[0m  
 [38;5;240m  │[0m                 [35m╰[0m[35m─[0m[35m─[0m variable "$value" has declared type String but initializer is Int
[38;5;246m───╯[0m
